# laughing-fortnight

./: .gitmodules  README.md
doc/: 开题.docx  开题.md  系统设计.md
doc/assets/: 开题框图.pptx  开题甘特图.pptx  软件框图.pptx
doc/module-test/: Accel.md  BC26.md  GPS.md
doc/modules/BC26 NBIoT/: Quectel_BC26_LwM2M_AT_Commands_Manual_V1.3_20180703.doc
doc/modules/TP4056/: ReadMe.doc
embedded/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  clock_config.cpp  main.cpp  mbed_app.json
embedded/peripheral/: command_receiver_base.hpp  command_receiver_serial.hpp  command_sender_base.hpp  command_sender_serial.hpp  command_spi.hpp  feedback_message.hpp  feedback_message_queue.hpp  global_peripheral.hpp  message_queue.hpp  peripheral_std_framework.hpp  peripheral_thread.hpp
embedded/peripheral/accel/: accel.hpp  accel_message.hpp  adxl345_address.hpp  adxl345_int.hpp  adxl345_interface.hpp  adxl345_middleware.hpp
embedded/peripheral/bc26/: bc26.hpp  bc26_config.hpp  bc26_message.hpp
embedded/peripheral/buzzer/: buzzer.hpp  buzzer_message.hpp
embedded/peripheral/gps/: gps.hpp  gps_message.hpp  nmea_parser.hpp
embedded/test/: test_all.hpp
embedded/test/peripheral/: test_feedback_message_queue.hpp  test_peripheral_std_framework.hpp  test_peripheral_thread.hpp
embedded/test/peripheral/accel/: test_accel.hpp
embedded/test/peripheral/bc26/: test_bc26.hpp
embedded/test/peripheral/buzzer/: test_buzzer.hpp
embedded/test/peripheral/gps/: test_gps.hpp
embedded/tft/: tft.hpp  tft_debug_console.hpp
embedded/utils/: app.hpp  debug.hpp  msg_data.hpp
server/: .conf  .gitignore  config.py  server.py  tcpserver.py  test.py
server/data/: position.json
server/util/: coord_trans.py
